[gd_scene load_steps=3 format=3 uid="uid://doj6n00yl723f"]

[ext_resource type="Script" path="res://EnemyCircle.gd" id="1_0nbqo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qme8m"]

[node name="EnemyCircle" type="Node2D"]
position = Vector2(300, 176)
script = ExtResource("1_0nbqo")

[node name="EnemyRadius" type="Area2D" parent="."]

[node name="EnemyRadiusCollision" type="CollisionShape2D" parent="EnemyRadius"]
shape = SubResource("CircleShape2D_qme8m")

[node name="EnemyOriginRadius" type="Area2D" parent="."]

[node name="EnemyOriginCollision" type="CollisionShape2D" parent="EnemyOriginRadius"]
shape = SubResource("CircleShape2D_qme8m")

[connection signal="body_entered" from="EnemyRadius" to="." method="_on_enemy_radius_body_entered"]
[connection signal="body_entered" from="EnemyOriginRadius" to="." method="_on_enemy_origin_radius_body_entered"]
